link index.html to pancakes.html

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 
     <body>
         <h1>Odin Recipes</h1>
+        <h2> <a href="./recipes/pancakes.html">Apple Pancake</a></h2>
     </body>
 </html>
