Add img, description and recipe to pancake.html

--- a/recipes/pancakes.html
+++ b/recipes/pancakes.html
@@ -8,5 +8,33 @@
 
     <body>
         <h1> Apple Pancake Recipe</h1>
+        <img src="../img/apple_pancake.jpeg" width="300" height="200" alt="Finished Pancakes">
+        <h2> Description </h2>
+        <p> A fluffy, sweet pancake with baked in apple slices. Excellent with a scoop 
+            of vanilla ice cream.</p>
+        <h3> Ingredients </h3>
+        <ul>
+            <li> 3 tablespoons butter</li>
+            <li> 1 large apple, cored and sliced</li>
+            <li> 1/2 cup white sugar, divided</li>
+            <li> 2 teaspoons ground cinnamon</li>
+            <li> 4 eggs</li>
+            <li> 1/3 cup milk</li>
+            <li> 1/3 cup all-purpose flour</li>
+            <li> 1 teaspoon baking powder</li>
+            <li> 1 teaspoon vanilla extract</li>
+            <li> 1 pinch salt</li>
+        </ul>
+        <h3>Steps</h3>
+        <ol>
+            <li> Preheat oven to 400 degrees F (200 degrees C)</li>
+            <li> Melt butter in oven-safe skillet over medium heat; cook and stir apple
+                 slices, about 1/4 cup sugar, and cinnamon in butter until apples are tender,
+                 about 5 minutes </li>
+            <li> Beat eggs, milk flour, remaining 1/4 cup sugar, baking powder, vanilla extract
+                 and salt in a large bowl until batter is smooth; pour batter evenly over apples.</li>
+            <li> Bake in the Preheated oven until golden brown, about 10 minutes. Run a spatula
+                 around the edges of the pancake to loosen. Invert skillet over a large plate to serve</li>
+        </ol>
     </body>
 </html>
