Link index.html to waffles.html

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <body>
         <h1>Odin Recipes</h1>
         <h2> <a href="./recipes/pancakes.html">Apple Pancake</a></h2>
+        <h2> <a href="./recipes/waffles.html">Waffles</a></h2>
     </body>
 </html>
