--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
         <h1>Odin Recipes</h1>
         <h2> <a href="./recipes/pancakes.html">Apple Pancake</a></h2>
         <h2> <a href="./recipes/waffles.html">Waffles</a></h2>
+        <h2> <a href="./recipes/strawberry_smoothie.html">Strawberry Smoothie</a></h2>
     </body>
 </html>
