Add image to index.html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     </head>
 
     <body>
+        <img src="./img/Viking-Cook-Book.jpg" width="200" height="200" 
+            alt="Viking cookbook cover">
         <h1>Odin Recipes</h1>
         <h2> <a href="./recipes/pancakes.html">Apple Pancake</a></h2>
         <h2> <a href="./recipes/waffles.html">Waffles</a></h2>
