Add link back to index.html to recipes pages

--- a/recipes/pancakes.html
+++ b/recipes/pancakes.html
@@ -36,5 +36,6 @@
             <li> Bake in the Preheated oven until golden brown, about 10 minutes. Run a spatula
                  around the edges of the pancake to loosen. Invert skillet over a large plate to serve</li>
         </ol>
+        <a href="../index.html">Back to main page</a>
     </body>
 </html>
