--- a/recipes/strawberry_smoothie.html
+++ b/recipes/strawberry_smoothie.html
@@ -27,5 +27,6 @@
                 Add ice and blend until smooth and creamy.</li>
             <li>Pour into glass and serve immediately</li>
         </ol>
+        <a href="../index.html">Back to main page</a>
     </body>
 </html>
