--- a/recipes/waffles.html
+++ b/recipes/waffles.html
@@ -31,6 +31,7 @@
             <li>Spray preheated waffle iron with non-stick cooking spray. Pour mix onto hot
                 waffle iron. Cook until golden brown. Serve hot. </li>
         </ol>
+        <a href="../index.html">Back to main page</a>
     </body>
 
 </html>
